--- a/Bodymon/Assembly-CSharp.csproj
+++ b/Bodymon/Assembly-CSharp.csproj
@@ -61,6 +61,7 @@
     <Compile Include="Assets\Classes\Fight.cs" />
     <Compile Include="Assets\Classes\Movement.cs" />
     <Compile Include="Assets\Classes\MuscleSet.cs" />
+    <None Include="Assets\Graphics\Battles\pokemon_pixel_font\readme.txt" />
     <Reference Include="UnityEngine">
       <HintPath>C:/Program Files/Unity/Hub/Editor/2019.3.15f1/Editor/Data/Managed/UnityEngine/UnityEngine.dll</HintPath>
     </Reference>
@@ -595,29 +596,13 @@
       <Project>{7E514365-BAE0-F39A-8191-4D3A2B4A9AB4}</Project>
       <Name>Unity.Timeline.Editor</Name>
     </ProjectReference>
-    <ProjectReference Include="Unity.2D.Animation.Runtime.csproj">
-      <Project>{1DE97163-A8E2-6BA8-B9A6-A57F2E58A0AD}</Project>
-      <Name>Unity.2D.Animation.Runtime</Name>
-    </ProjectReference>
-    <ProjectReference Include="Unity.2D.PixelPerfect.Editor.csproj">
-      <Project>{C4C848B4-05EC-5324-938E-53DD3E35B5F8}</Project>
-      <Name>Unity.2D.PixelPerfect.Editor</Name>
-    </ProjectReference>
     <ProjectReference Include="Unity.VSCode.Editor.csproj">
       <Project>{D0408858-7DCF-EA7B-AADA-52BEA812C045}</Project>
       <Name>Unity.VSCode.Editor</Name>
     </ProjectReference>
-    <ProjectReference Include="Unity.2D.SpriteShape.Editor.csproj">
-      <Project>{C8221DE3-552F-6755-9BAC-F00172EB18B1}</Project>
-      <Name>Unity.2D.SpriteShape.Editor</Name>
-    </ProjectReference>
     <ProjectReference Include="Unity.TextMeshPro.Editor.csproj">
       <Project>{118421E2-A150-3BF9-000C-2415F11D7AC4}</Project>
       <Name>Unity.TextMeshPro.Editor</Name>
-    </ProjectReference>
-    <ProjectReference Include="Unity.2D.Path.Editor.csproj">
-      <Project>{4E15E2AB-F9F1-521A-960F-B3E0CF3EB3A4}</Project>
-      <Name>Unity.2D.Path.Editor</Name>
     </ProjectReference>
     <ProjectReference Include="UnityEngine.UI.csproj">
       <Project>{113276E7-E08A-ECA7-AE8E-1204CD453C81}</Project>
@@ -627,14 +612,6 @@
       <Project>{20E2FAC1-F1D9-D7B9-220A-44DB069C9F40}</Project>
       <Name>Unity.Timeline</Name>
     </ProjectReference>
-    <ProjectReference Include="Unity.2D.Animation.Triangle.Runtime.csproj">
-      <Project>{88F7CD25-F7E2-8C84-214D-6C8FB22D2EE8}</Project>
-      <Name>Unity.2D.Animation.Triangle.Runtime</Name>
-    </ProjectReference>
-    <ProjectReference Include="PsdPlugin.csproj">
-      <Project>{143989E6-64BE-3092-D8D9-D50ACDC6775E}</Project>
-      <Name>PsdPlugin</Name>
-    </ProjectReference>
     <ProjectReference Include="Unity.CollabProxy.Editor.csproj">
       <Project>{07464E7C-951D-1CD5-CA52-8B62CF126395}</Project>
       <Name>Unity.CollabProxy.Editor</Name>
@@ -643,57 +620,9 @@
       <Project>{913D0E9C-5883-95A3-DFAB-16F02653C6AB}</Project>
       <Name>Unity.Rider.Editor</Name>
     </ProjectReference>
-    <ProjectReference Include="Unity.Mathematics.csproj">
-      <Project>{18F53D4B-0932-C306-1482-99CCA2C4134C}</Project>
-      <Name>Unity.Mathematics</Name>
-    </ProjectReference>
-    <ProjectReference Include="Unity.2D.Psdimporter.Editor.csproj">
-      <Project>{F8A448FC-B396-C3DE-A26A-40D28240EDCA}</Project>
-      <Name>Unity.2D.Psdimporter.Editor</Name>
-    </ProjectReference>
-    <ProjectReference Include="Unity.InternalAPIEngineBridge.001.csproj">
-      <Project>{5DF1E1BB-9DF3-131E-DF37-3AC37BE4EA8F}</Project>
-      <Name>Unity.InternalAPIEngineBridge.001</Name>
-    </ProjectReference>
-    <ProjectReference Include="Unity.2D.Sprite.Editor.csproj">
-      <Project>{97573074-9857-61B3-53A1-26D96FAD9613}</Project>
-      <Name>Unity.2D.Sprite.Editor</Name>
-    </ProjectReference>
-    <ProjectReference Include="Unity.2D.Common.Runtime.csproj">
-      <Project>{E2CF85C4-5BA9-5CBE-75C0-A196705F2154}</Project>
-      <Name>Unity.2D.Common.Runtime</Name>
-    </ProjectReference>
-    <ProjectReference Include="Unity.2D.Tilemap.Editor.csproj">
-      <Project>{76C92020-09BF-F32B-F226-D1ED6F75AB7D}</Project>
-      <Name>Unity.2D.Tilemap.Editor</Name>
-    </ProjectReference>
-    <ProjectReference Include="Unity.2D.SpriteShape.Runtime.csproj">
-      <Project>{16EFEFC1-AB8D-BFE2-E0BE-B4EF976F77E1}</Project>
-      <Name>Unity.2D.SpriteShape.Runtime</Name>
-    </ProjectReference>
-    <ProjectReference Include="Unity.2D.PixelPerfect.csproj">
-      <Project>{39663865-45EE-7C5D-C016-F6DAF8B188CA}</Project>
-      <Name>Unity.2D.PixelPerfect</Name>
-    </ProjectReference>
-    <ProjectReference Include="Unity.2D.Animation.Editor.csproj">
-      <Project>{97A1EBB5-8B78-E25D-2488-FE087314637B}</Project>
-      <Name>Unity.2D.Animation.Editor</Name>
-    </ProjectReference>
-    <ProjectReference Include="Unity.Mathematics.Editor.csproj">
-      <Project>{2F919695-5770-1A0A-8B1F-8D3D41567A73}</Project>
-      <Name>Unity.Mathematics.Editor</Name>
-    </ProjectReference>
     <ProjectReference Include="Unity.TextMeshPro.csproj">
       <Project>{BD97F034-4F4D-27BD-67E6-0FFB7C0D8C82}</Project>
       <Name>Unity.TextMeshPro</Name>
-    </ProjectReference>
-    <ProjectReference Include="Unity.2D.Common.Editor.csproj">
-      <Project>{B090CD22-E00D-7067-93EF-1A06459BE063}</Project>
-      <Name>Unity.2D.Common.Editor</Name>
-    </ProjectReference>
-    <ProjectReference Include="Unity.InternalAPIEditorBridge.001.csproj">
-      <Project>{3E0DE1CB-5514-B3BB-7F3C-39E4F79BD062}</Project>
-      <Name>Unity.InternalAPIEditorBridge.001</Name>
     </ProjectReference>
     <ProjectReference Include="UnityEditor.UI.csproj">
       <Project>{E9610E60-BC81-791D-4743-E1BAFD807B58}</Project>
