--- a/Bodymon/Assembly-CSharp.csproj
+++ b/Bodymon/Assembly-CSharp.csproj
@@ -57,7 +57,6 @@
   <ItemGroup>
      <Compile Include="Assets\Classes\Bodymons.cs" />
      <Compile Include="Assets\Classes\Fight.cs" />
-     <Compile Include="Assets\Classes\GymInside.cs" />
      <Compile Include="Assets\Classes\Inventory.cs" />
      <Compile Include="Assets\Classes\Movement.cs" />
      <Compile Include="Assets\Classes\MuscleSet.cs" />
@@ -250,7 +249,7 @@
  <HintPath>C:/Program Files/Unity/Hub/Editor/2019.4.0f1/Editor/Data/Managed/UnityEditor.dll</HintPath>
  </Reference>
  <Reference Include="Newtonsoft.Json">
- <HintPath>D:/Users/Hannes/Documents/GitHub/SWP_Bodymons/Bodymon/Assets/JsonDotNet/Assemblies/Standalone/Newtonsoft.Json.dll</HintPath>
+ <HintPath>C:/Users/Domi/OneDrive - Bundeshandelsakademie und Bundeshandelsschule Kitzbühel/Pictures/body/body/Bodymon/Assets/JsonDotNet/Assemblies/Standalone/Newtonsoft.Json.dll</HintPath>
  </Reference>
  <Reference Include="netstandard">
  <HintPath>C:/Program Files/Unity/Hub/Editor/2019.4.0f1/Editor/Data/NetStandard/ref/2.0.0/netstandard.dll</HintPath>
@@ -597,44 +596,38 @@
  <Reference Include="System.Xml.Serialization">
  <HintPath>C:/Program Files/Unity/Hub/Editor/2019.4.0f1/Editor/Data/NetStandard/compat/2.0.0/shims/netfx/System.Xml.Serialization.dll</HintPath>
  </Reference>
+ <Reference Include="Unity.Timeline.Editor">
+ <HintPath>C:/Users/Domi/OneDrive - Bundeshandelsakademie und Bundeshandelsschule Kitzbühel/Pictures/body/body/Bodymon/Library/ScriptAssemblies/Unity.Timeline.Editor.dll</HintPath>
+ </Reference>
+ <Reference Include="Unity.VSCode.Editor">
+ <HintPath>C:/Users/Domi/OneDrive - Bundeshandelsakademie und Bundeshandelsschule Kitzbühel/Pictures/body/body/Bodymon/Library/ScriptAssemblies/Unity.VSCode.Editor.dll</HintPath>
+ </Reference>
+ <Reference Include="Unity.TextMeshPro.Editor">
+ <HintPath>C:/Users/Domi/OneDrive - Bundeshandelsakademie und Bundeshandelsschule Kitzbühel/Pictures/body/body/Bodymon/Library/ScriptAssemblies/Unity.TextMeshPro.Editor.dll</HintPath>
+ </Reference>
+ <Reference Include="UnityEngine.UI">
+ <HintPath>C:/Users/Domi/OneDrive - Bundeshandelsakademie und Bundeshandelsschule Kitzbühel/Pictures/body/body/Bodymon/Library/ScriptAssemblies/UnityEngine.UI.dll</HintPath>
+ </Reference>
+ <Reference Include="Unity.Timeline">
+ <HintPath>C:/Users/Domi/OneDrive - Bundeshandelsakademie und Bundeshandelsschule Kitzbühel/Pictures/body/body/Bodymon/Library/ScriptAssemblies/Unity.Timeline.dll</HintPath>
+ </Reference>
+ <Reference Include="Unity.CollabProxy.Editor">
+ <HintPath>C:/Users/Domi/OneDrive - Bundeshandelsakademie und Bundeshandelsschule Kitzbühel/Pictures/body/body/Bodymon/Library/ScriptAssemblies/Unity.CollabProxy.Editor.dll</HintPath>
+ </Reference>
+ <Reference Include="Unity.Rider.Editor">
+ <HintPath>C:/Users/Domi/OneDrive - Bundeshandelsakademie und Bundeshandelsschule Kitzbühel/Pictures/body/body/Bodymon/Library/ScriptAssemblies/Unity.Rider.Editor.dll</HintPath>
+ </Reference>
+ <Reference Include="Unity.2D.Sprite.Editor">
+ <HintPath>C:/Users/Domi/OneDrive - Bundeshandelsakademie und Bundeshandelsschule Kitzbühel/Pictures/body/body/Bodymon/Library/ScriptAssemblies/Unity.2D.Sprite.Editor.dll</HintPath>
+ </Reference>
+ <Reference Include="Unity.TextMeshPro">
+ <HintPath>C:/Users/Domi/OneDrive - Bundeshandelsakademie und Bundeshandelsschule Kitzbühel/Pictures/body/body/Bodymon/Library/ScriptAssemblies/Unity.TextMeshPro.dll</HintPath>
+ </Reference>
+ <Reference Include="UnityEditor.UI">
+ <HintPath>C:/Users/Domi/OneDrive - Bundeshandelsakademie und Bundeshandelsschule Kitzbühel/Pictures/body/body/Bodymon/Library/ScriptAssemblies/UnityEditor.UI.dll</HintPath>
+ </Reference>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="Unity.Timeline.Editor.csproj">
-      <Project>{7E514365-BAE0-F39A-8191-4D3A2B4A9AB4}</Project>
-      <Name>Unity.Timeline.Editor</Name>
-    </ProjectReference>
-    <ProjectReference Include="Unity.VSCode.Editor.csproj">
-      <Project>{D0408858-7DCF-EA7B-AADA-52BEA812C045}</Project>
-      <Name>Unity.VSCode.Editor</Name>
-    </ProjectReference>
-    <ProjectReference Include="Unity.TextMeshPro.Editor.csproj">
-      <Project>{118421E2-A150-3BF9-000C-2415F11D7AC4}</Project>
-      <Name>Unity.TextMeshPro.Editor</Name>
-    </ProjectReference>
-    <ProjectReference Include="UnityEngine.UI.csproj">
-      <Project>{113276E7-E08A-ECA7-AE8E-1204CD453C81}</Project>
-      <Name>UnityEngine.UI</Name>
-    </ProjectReference>
-    <ProjectReference Include="Unity.Timeline.csproj">
-      <Project>{20E2FAC1-F1D9-D7B9-220A-44DB069C9F40}</Project>
-      <Name>Unity.Timeline</Name>
-    </ProjectReference>
-    <ProjectReference Include="Unity.CollabProxy.Editor.csproj">
-      <Project>{07464E7C-951D-1CD5-CA52-8B62CF126395}</Project>
-      <Name>Unity.CollabProxy.Editor</Name>
-    </ProjectReference>
-    <ProjectReference Include="Unity.Rider.Editor.csproj">
-      <Project>{913D0E9C-5883-95A3-DFAB-16F02653C6AB}</Project>
-      <Name>Unity.Rider.Editor</Name>
-    </ProjectReference>
-    <ProjectReference Include="Unity.TextMeshPro.csproj">
-      <Project>{BD97F034-4F4D-27BD-67E6-0FFB7C0D8C82}</Project>
-      <Name>Unity.TextMeshPro</Name>
-    </ProjectReference>
-    <ProjectReference Include="UnityEditor.UI.csproj">
-      <Project>{E9610E60-BC81-791D-4743-E1BAFD807B58}</Project>
-      <Name>UnityEditor.UI</Name>
-    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
