--- a/Bodymon/Assembly-CSharp.csproj
+++ b/Bodymon/Assembly-CSharp.csproj
@@ -56,19 +56,19 @@
     <Analyzer Include="C:\Program Files\Microsoft Visual Studio\2022\Community\Common7\IDE\Extensions\Microsoft\Visual Studio Tools for Unity\Analyzers\Microsoft.Unity.Analyzers.dll" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Assets\Classes\Bodymons.cs" />
+    <Compile Include="Assets\Classes\Player\Bodymon.cs" />
     <Compile Include="Assets\Classes\SaveGame.cs" />
+    <Compile Include="Assets\Classes\Boots.cs" />
     <Compile Include="Assets\Classes\Shop.cs" />
-    <Compile Include="Assets\Classes\Movement.cs" />
-    <Compile Include="Assets\Classes\MuscleSet.cs" />
+    <Compile Include="Assets\Classes\Player\Movement.cs" />
+    <Compile Include="Assets\Classes\Player\MuscleSet.cs" />
+    <Compile Include="Assets\Classes\Items\Items.cs" />
+    <Compile Include="Assets\Classes\Items\Item.cs" />
     <Compile Include="Assets\Classes\Fight.cs" />
     <Compile Include="Assets\Classes\PumpingIron.cs" />
-    <Compile Include="Assets\Classes\Inventory.cs" />
+    <Compile Include="Assets\Classes\Player\Inventory.cs" />
     <Compile Include="Assets\Classes\GymInside.cs" />
-    <Compile Include="Assets\Classes\PlayerBuffs.cs" />
-    <Compile Include="Assets\Classes\Boots.cs" />
-    <Compile Include="Assets\Classes\Item.cs" />
-    <Compile Include="Assets\Classes\Items.cs" />
+    <Compile Include="Assets\Classes\Player\Bodymons.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\Graphics\Battles\pokemon_pixel_font\readme.txt" />
