items merged works

--- a/Bodymon/Assembly-CSharp.csproj
+++ b/Bodymon/Assembly-CSharp.csproj
@@ -62,6 +62,7 @@
     <Compile Include="Assets\Classes\Player\Movement.cs" />
     <Compile Include="Assets\Classes\Items\Items.cs" />
     <Compile Include="Assets\Classes\Items\Item.cs" />
+    <Compile Include="Assets\Classes\MuscleSet.cs" />
     <Compile Include="Assets\Classes\PumpingIron.cs" />
     <Compile Include="Assets\Classes\Player\Inventory.cs" />
     <Compile Include="Assets\Classes\Player\Bodymon.cs" />
