--- a/Bodymon/UserSettings/Search.settings
+++ b/Bodymon/UserSettings/Search.settings
@@ -7,7 +7,7 @@ onBoardingDoNotAskAgain = true
 showPackageIndexes = false
 showStatusBar = false
 scopes = {
-	"last_search.785D90A9" = "trigger"
+	"last_search.785D90A9" = "pumping"
 	"OpenInspectorPreview.785D90A9" = "0"
 	"currentGroup.785D90A9" = "all"
 }
@@ -59,6 +59,9 @@ providers = {
 	}
 }
 recentSearches = [
+	"p"
+	"S"
+	"L"
 	"t"
 ]
 searchItemFavorites = [
