--- a/Bodymon/Assembly-CSharp.Player.csproj
+++ b/Bodymon/Assembly-CSharp.Player.csproj
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
-    <LangVersion>latest</LangVersion>
+    <LangVersion>9.0</LangVersion>
   </PropertyGroup>
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -53,6 +53,9 @@
     <UnityVersion>2021.2.2f1</UnityVersion>
   </PropertyGroup>
   <ItemGroup>
+    <Analyzer Include="C:\Program Files\Microsoft Visual Studio\2022\Community\Common7\IDE\Extensions\Microsoft\Visual Studio Tools for Unity\Analyzers\Microsoft.Unity.Analyzers.dll" />
+  </ItemGroup>
+  <ItemGroup>
     <Compile Include="Assets\Classes\BackgroundScripts\GYM\ChildMachine.cs" />
     <Compile Include="Assets\Classes\SaveGame.cs" />
     <Compile Include="Assets\Classes\BackgroundScripts\Fight\ArenaLoadFight.cs" />
@@ -64,6 +67,7 @@
     <Compile Include="Assets\Classes\Player\Movement.cs" />
     <Compile Include="Assets\Classes\UI\Menu.cs" />
     <Compile Include="Assets\Classes\BackgroundScripts\WaitForThunder.cs" />
+    <Compile Include="Assets\Classes\UI\MuscleUI.cs" />
     <Compile Include="Assets\Classes\FIght\ButtonInfo.cs" />
     <Compile Include="Assets\Classes\Items\Items.cs" />
     <Compile Include="Assets\Classes\Items\Item.cs" />
@@ -91,7 +95,6 @@
     <Compile Include="Assets\Classes\Dialogs\DialogueManager.cs" />
     <Compile Include="Assets\Classes\BackgroundScripts\Fight\Fight.cs" />
     <Compile Include="Assets\Classes\UI\ShowBuffs.cs" />
-    <Compile Include="Assets\Classes\UI\MuscleUI.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\Graphics\Battles\pokemon_pixel_font\readme.txt" />
